--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         this is Text <br />
         <h1> Bonjour </h1>     
         <h1 color="red"> Bonjour </h1>         
-        <img src="buu.avif" />
+        <img src="buu1.png" />
         <p>This is a endchec</p>
     </body>
 </html>
