--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
     </head>
     <body>
         this is Text <br />
-        <h1> Bonjour </h1>     
-        <h1 color="red"> Bonjour </h1>         
-        <img src="buu1.png" />
-        <p>This is a endchec</p>
+        <h1> RESUME </h1>     
+        <h1 color="red"> My Name is  Chinnawat leekpai StudentID 64160065 </h1>         
+        <img src="luk3.jpg" />
+        <h2> studying at : Burapa University </h2>
+        <h2> Faculty : Informatics </h2>
+        <h2> Branch : Software Engineering : SE</h2>
+        <h2> Date of Birth : 20 April 2003 </h2>
+        <h2> Phone : +66 829503328 </h2>
+        <h2> E-Mail : uiowia1098@gmail.com </h2>
+        <p> Thank you </p>
     </body>
 </html>
