--- a/index.html
+++ b/index.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Page Title</title>
+        <title> My Profile</title>
         <meta charset="utf-8" />
     </head>
-    <body>
-        this is Text <br />
-        <h1> RESUME </h1>     
-        <h1 color="red"> My Name is  Chinnawat leekpai StudentID 64160065 </h1>         
-        <img src="luk3.jpg" />
-        <h2> studying at : Burapa University </h2>
-        <h2> Faculty : Informatics </h2>
-        <h2> Branch : Software Engineering : SE</h2>
-        <h2> Date of Birth : 20 April 2003 </h2>
-        <h2> Phone : +66 829503328 </h2>
-        <h2> E-Mail : uiowia1098@gmail.com </h2>
-        <p> Thank you </p>
+    <body background="">  
+        <h1 Align="center"> PROFILE </h1>     
+        <center> <img src="luk3.jpg" > </center> 
+        <br>
+        
+        <h2 Align="center">  Name : Chinnawat leekpai  </h2>    
+        <h2 Align="center"> StudentID : 64160065 </h2> 
+        <h2 Align="center"> Studying at : Burapa University </h2> 
+        <h2 Align="center"> Faculty : Informatics </h2>
+        <h2 Align="center"> Branch : Software Engineering : SE</h2>
+        <h2 Align="center"> Date of Birth : 20 April 2003 </h2>
+        <h2 Align="center"> Phone : +66 829503328 </h2>
+        <h2 Align="center"> E-Mail : uiowia1098@gmail.com </h2>
+        <p> Thank you </p>  
+        <br>
+        <hr>
+        <marquee behavior="alternate" direction="right" Align="center" height="100" hspace="100" vspace="100" >
+            <h2>Software Engineer, Burapha University 88823764  Software Development Trainning Camp</h2>
+         </marquee>
     </body>
 </html>
